# AgentOOP

./: .gitignore  CMakeLists.txt
include/: Agent.h  AgentGraph.h  InputHandling.hpp  Player.hpp  SpatialGraph.h  WorldGraph.h
resources/shaders/glsl330/: lighting.frag  lighting.vert
src/: Agent.cpp  AgentGraph.cpp  ComponentManager.cpp  SpatialGraph.cpp  main.cpp
src/agents/: Agent.cpp  Agent.hpp  AgentGraph.cpp  AgentGraph.hpp
src/agents/components/: position.hpp
src/agents/systems/: GraphMovement.cpp
src/components/: Grounded.hpp  InputState.hpp  LookRotation.hpp  MoveDir.hpp  Position.hpp  Velocity.hpp
src/core/: ComponentManager.cpp  ComponentManager.hpp  CoreTypes.hpp  ECSCoordinator.cpp  ECSCoordinator.hpp  ESCCoordinator.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
src/game/: InputHandling.cpp  Player.cpp  ResourceManager.hpp
src/graphs/: SpatialGraph.cpp  SpatialGraph.hpp
src/systems/: MovementSystem.cpp  MovementSystem.hpp
